# ASCVI

./: README.md  main.py  pyproject.toml  requirements.txt
auxiliaries/: dataset_fetcher.py
measures/: CDR_index.py  CVDD.py  CVNN.py  DCVI.py  DSI.py  ICAV.py  VIASCKDE.py  base_measure.py  dbcv_measures.py  registry.py  standard_measures.py
measures/auxiliaries/: CDBW.py  dbcv.py
