[project]
name = "ASCVI"
version = "0.1.0"
description = "A collection of CVI for clusterings containing arbitrary shaped data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx~=3.4.2",
    "numpy~=2.1.3",
    "s-dbw==0.4.0",
    "scikit-learn~=1.5.2",
    "scipy~=1.14.1",
]
